--- a/SharePoint/_static/css/style.css
+++ b/SharePoint/_static/css/style.css
@@ -190,14 +190,25 @@ div.topic {
   width: 50%;
 }
 
+div.topic ul ul {
+  padding-bottom: 0;
+}
+
+div.topic p {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
 .pl-left-column {
   float: left;
   width: 50%;
+  padding: 0 5px;
 }
 
 .pl-right-column {
   float: right;
   width: 50%;
+  padding: 0 5px;
 }
 
 #search-input {
@@ -247,4 +258,37 @@ table.docutils td, table.docutils th {
 table .highlight {
   padding: 0;
   margin: 0;
+}
+
+@media (max-width: 991px) {
+  .container-fluid {
+    padding: 0 30px;
+  }
+  div.topic {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .container-fluid {
+    padding: 0 20px;
+  }
+
+  .container, .container-sm {
+    max-width: 800px;
+  }
+
+  .pl-left-column {
+    float: initial;
+    width: 100%;
+  }
+  
+  .pl-right-column {
+    float: initial;
+    width: 100%;
+  }
 }
