--- a/Public/_static/css/style.css
+++ b/Public/_static/css/style.css
@@ -246,6 +246,7 @@ code, pre, tt {
 table.docutils {
   margin-bottom: 1rem;
   border: 1px solid #dee2e6 !important;
+  text-align: left;
 }
 
 table.docutils td, table.docutils th {
