--- a/Public/_static/css/style.css
+++ b/Public/_static/css/style.css
@@ -223,10 +223,18 @@ div.topic p {
   margin-top: 0.25rem;
 }
 
+.col-body .pl-left-column ul li ul {
+  padding-left: 1rem;
+}
+
 .col-body .pl-right-column ul {
   list-style-type: none;
   padding-left: 0;
   margin-top: 0.25rem;
+}
+
+.col-body .pl-right-column ul li ul {
+  padding-left: 1rem;
 }
 
 .pl-left-column {
