--- a/Public/_static/css/style.css
+++ b/Public/_static/css/style.css
@@ -1,5 +1,9 @@
 /* В этом файле переопределяются стандартные стили basic-темы Sphinx. В этих стилях есть сомнительные ходы, тк писать поверх темы вообще не очень правильно, а внешний вид изменить нужно */
 
+.img-link.public-integration img{
+  filter:none!important;
+}
+
 .container-fluid {
   max-width: 1601px;
   padding: 0 70px;
