--- a/Public/_static/css/style.css
+++ b/Public/_static/css/style.css
@@ -1,5 +1,11 @@
 /* В этом файле переопределяются стандартные стили basic-темы Sphinx. В этих стилях есть сомнительные ходы, тк писать поверх темы вообще не очень правильно, а внешний вид изменить нужно */
 
+
+#embedding-forms .section:not(#custom-web-site) img{
+  margin-bottom: 5px;
+  filter: none;
+}
+
 .img-link.public-integration img{
   filter:none!important;
   margin:0!important;
